login, signup routes defined

--- a/views/includes/head.jade
+++ b/views/includes/head.jade
@@ -6,7 +6,7 @@ head
   meta(name='viewport', content='width=device-width')
   title= title
   link(href='/_css/foundation.min.css', rel='stylesheet', type='text/css', media='all')
-  link(href='/_css/normalize.min.css', rel='stylesheet', type='text/css', media='all')
+  link(href='/_css/normalize.css', rel='stylesheet', type='text/css', media='all')
   link(href='/_css/style.css', rel='stylesheet', type='text/css', media='all')
   link(href='/_css/app.css', rel='stylesheet', type='text/css', media='all')
   script(src="/_js/vendor/custom.modernizr.js", type="text/javascript", )
