Front End and Back End work for login/signup credentials

--- a/views/signUp.jade
+++ b/views/signUp.jade
@@ -1,26 +1,14 @@
-include includes/head
+extends layout
 
-body.signUp
-  .signUp-form
-    .row
-      .large-6.large-centered.columns
-        form(method="POST", action='/signup')
-          .row
-            .large-10.large-offset-1.columns
-              label.inline(for='username') Username
-              input#username(type='text', name="username", required)
-          .row
-            .large-10.large-offset-1.columns
-              label.inline(for='fullname') Full Name
-              input#fullname(type='text', name='fullname', required)
-          .row
-            .large-10.large-offset-1.columns
-              label.inline(for='email') Email
-              input#email(type='text', name='email', placeholder="we won't spam you", required)
-          .row
-            .large-10.large-offset-1.columns
-              label.inline(for='password') Password
-              input#password(type='password', name='password', placeholder='at least 8 characters', required)
-          .row
-            .large-10.large-offset-1.columns
-              button(type='submit') Register
+block content
+  include account
+  include modals/alert
+
+block scripts
+  script(src='/vendor/jquery.min.js')
+  script(src='/vendor/jquery.form.js')
+  script(src='/vendor/bootstrap-modal.js')
+  script(src='/vendor/bootstrap-transition.js')
+  script(src='/js/views/signup.js')
+  script(src='/js/controllers/signupController.js')
+  script(src='/js/form-validators/accountValidator.js')
